<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".TakePressionFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24sp"
        android:text="@string/tomar_presion"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="300sp"
        android:layout_height="65sp"
        android:layout_marginTop="10sp"
        android:text="@string/descripcion_tomar_presion"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:text="@string/fecha"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

    <Switch
        android:id="@+id/switchTriplicado"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6sp"
        android:minHeight="48dp"
        android:text="@string/triplicado"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFecha"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/btnGuardarPresion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/btnColor1"
        android:text="@string/guardar_datos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/pSistolica"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/presion_sistolica"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/btnGuardarPresion"
        app:layout_constraintEnd_toStartOf="@+id/pDiastolica"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchTriplicado"
        app:layout_constraintVertical_bias="0.33" />

    <EditText
        android:id="@+id/pDiastolica"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/presion_diastolica"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/btnGuardarPresion"
        app:layout_constraintEnd_toStartOf="@+id/pulso"
        app:layout_constraintStart_toEndOf="@+id/pSistolica"
        app:layout_constraintTop_toBottomOf="@+id/switchTriplicado"
        app:layout_constraintVertical_bias="0.33" />

    <EditText
        android:id="@+id/pulso"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/pulso"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/btnGuardarPresion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pDiastolica"
        app:layout_constraintTop_toBottomOf="@+id/switchTriplicado"
        app:layout_constraintVertical_bias="0.33" />
    <!--
    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Presión sistólica"
        android:inputType="number"
        tools:layout_editor_absoluteX="94dp"
        tools:layout_editor_absoluteY="300dp" />
    -->
</androidx.constraintlayout.widget.ConstraintLayout>